Fix expanding/collapsing not working with screen reader mode, plus some cleanup.

--- a/src/ilw-accordion-panel.styles.css
+++ b/src/ilw-accordion-panel.styles.css
@@ -13,12 +13,12 @@
     border-left: var(--ilw-accordion-panel--border-left);
 }
 
-#header-parent.highlight {
+#header-parent:hover {
     color: var(--ilw-accordion-panel--hover-color);
     background: var(--ilw-accordion-panel--hover-background);
 }
 
-#header-parent.highlight.focus, #header-parent.focus {
+#header-parent:focus-within {
     background-color: var(--ilw-link--focus-background-color);
     color: var(--ilw-link--focus-color);
     outline: var(--ilw-link--focus-outline);
